--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ body {
     MOBILE: Menu
    ============== */
 
-#logo
+.logo-container
 {
     height: 25px;
     width: 700px;
@@ -206,6 +206,29 @@ p { margin: 0;}
     text-align: right;
     width: 517px;
 }
+.logo-container .logo
+{    
+    height: 128px;
+    margin-left: -493px;
+    margin-top: 20px;
+    width: 128px;
+}
+
+.logo-transition {
+    opacity: 1;
+    -webkit-transition: opacity 1.20s ease-in;
+    -moz-transition: opacity 1.20s ease-in;
+    -o-transition: opacity 1.20s ease-in;
+    -ms-transition: opacity 1.20s ease-in;
+    transition: opacity 1.20s ease-in;
+}
+.logo-transition:hover 
+{
+    cursor: pointer;
+    opacity: 0;
+}
+
+
 
 .main-content
 {
