Tweaks to report page

--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,7 @@ nav a.first:hover { border-top-left-radius: 6px 6px; }
    ========================================================================== */
 
 p { margin: 0;}
+.no-list-style { list-style-type: none;}
 
 .title { color: #A1A1A1; }
 
